--- a/templates/employee/employee-dashboard.html
+++ b/templates/employee/employee-dashboard.html
@@ -32,18 +32,21 @@
                                         <div class="task-list-container">
                                             <div class="task-list-body">
                                                 <ul id="task-list">
-                                                    {% for task in task_list %}
-                                                    <li class="task">
-                                                        <div class="task-container">
-                                                            <span class="task-action-btn task-check">
-                                                                <span class="action-circle large complete-btn" title="Mark Complete">
-                                                                    <i class="material-icons">check</i>
-                                                                </span>
-                                                            </span>
-                                                            <span class="task-label">{{task.task_title}}</span>
-                                                        </div>
-                                                    </li>
-                                                    {% endfor %}
+													{% for project in user_projects %}
+														<li class="task">
+															<h4>{{project}}</h4>
+															{% for task in user_task %}
+															<div class="task-container">
+																<span class="task-action-btn task-check">
+																	<span class="action-circle large complete-btn" title="Mark Complete">
+																		<i class="material-icons">check</i>
+																	</span>
+																</span>
+																<span class="task-label">{{task.task_name}}</span>
+															</div>
+															{% endfor %}
+														</li>
+													{% endfor %}
                                                 </ul>
                                             </div>
                                         </div>
@@ -59,17 +62,17 @@
 										<div class="card-body">
 											<div class="time-list">
 												<div class="dash-stats-list">
-													<h4>{{task_list.count}}</h4>
+													<h4>{{user_task.count}}</h4>
 													<p>Total Tasks</p>
 												</div>
 												<div class="dash-stats-list">
-													<h4>14</h4>
+													<h4>------</h4>
 													<p>Pending Tasks</p>
 												</div>
 											</div>
 											<div class="request-btn">
 												<div class="dash-stats-list">
-													<h4>1231123</h4>
+													<h4>{{user_projects.count}}</h4>
 													<p>Total Projects</p>
 												</div>
 											</div>
