--- a/templates/admin/add_task_assignee.html
+++ b/templates/admin/add_task_assignee.html
@@ -21,7 +21,11 @@
                         </span>
                     </div>
                     <div class="form-group">
-                        <label for="task_title">Project Title</label>
+                        <label for="project_title">Project Title</label>
+                        <input class="form-control" type="text" name="task_title" id="project_title" value="{{project_id}}" readonly >
+                    </div>
+                    <div class="form-group">
+                        <label for="task_title">Task Title</label>
                         <input class="form-control" type="text" name="task_title" id="task_title" value="{{task_id.task_title}}" readonly >
                     </div>
                     <div class="overflow-auto">
