--- a/templates/employee/leaves-employee.html
+++ b/templates/employee/leaves-employee.html
@@ -30,6 +30,64 @@
 					</div>
 					<!-- /Page Header -->
 
+					<!-- Leave Statistics -->
+					<div class="row">
+						<div class="col-md-12">
+							<div class="card-group m-b-30">
+									<div class="card mr-1" style="border-radius: 1rem; background-color:#e6e6e6;">
+										<div class="card-body">
+											<div class="d-flex justify-content-center">
+												<div>
+													<h3 class="p-1">Total Annual Leaves : <span class="text-secondary">12</span></h3>
+												</div>
+											</div>
+										</div>
+									</div>
+
+									<div class="card mx-1" style="border-radius: 1rem; background-color:#e6e6e6;">
+										<div class="card-body">
+											<div class="d-flex justify-content-center">
+												<div>
+													<h3 class="p-1">New Leaves : <span class="text-info">{{new_leaves_count}}</span></h3>
+												</div>
+											</div>
+										</div>
+									</div>
+
+									<div class="card mx-1" style="border-radius: 1rem; background-color:#e6e6e6;">
+										<div class="card-body">
+											<div class="d-flex justify-content-center">
+												<div>
+													<h3 class="p-1">Approved Leaves : <span class="text-success">{{approved_leaves_count}}</span></h3>
+												</div>
+											</div>
+										</div>
+									</div>
+
+									<div class="card mx-1" style="border-radius: 1rem; background-color:#e6e6e6;">
+										<div class="card-body">
+											<div class="d-flex justify-content-center">
+												<div>
+													<h3 class="p-1">Declined Leaves : <span class="text-danger">{{decline_leaves_count}}</span></h3>
+												</div>
+											</div>
+										</div>
+									</div>
+
+									<div class="card ml-1" style="border-radius: 1rem; background-color:#e6e6e6;">
+										<div class="card-body">
+											<div class="d-flex justify-content-center">
+												<div>
+													<h3 class="p-1">Remaining Leaves : <span class="text-primary">{{remaining_leaves_count}}</span></h3>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+						</div>
+					</div>
+					<!-- /Leave Statistics -->
+
 					<!-- Search Filter -->
 					<div class="row filter-row">
 						<div class="col-sm-6 col-md-3">
@@ -63,35 +121,6 @@
 						</div>
 					</div>
 					<!-- /Search Filter -->
-					
-					<!-- Leave Statistics -->
-					<div class="row">
-						<div class="col-md-3">
-							<div class="stats-info">
-								<h6>Annual Leave</h6>
-								<h4>12</h4>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="stats-info">
-								<h6>Medical Leave</h6>
-								<h4>3</h4>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="stats-info">
-								<h6>Other Leave</h6>
-								<h4>4</h4>
-							</div>
-						</div>
-						<div class="col-md-3">
-							<div class="stats-info">
-								<h6>Remaining Leave</h6>
-								<h4>5</h4>
-							</div>
-						</div>
-					</div>
-					<!-- /Leave Statistics -->
 
 				<!-- /Page Content -->
 					<div class="row">
