--- a/templates/admin/tickets.html
+++ b/templates/admin/tickets.html
@@ -30,70 +30,42 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="card-group m-b-30">
-								<div class="card">
+								<div class="card mr-2" style="border-radius: 1rem; background-color:#e6e6e6;">
 									<div class="card-body">
-										<div class="d-flex justify-content-between mb-3">
+										<div class="d-flex justify-content-center">
 											<div>
-												<span class="d-block">New Tickets</span>
+												<h3 class="p-3">Total Tickets :  <span class="text-secondary ml-2">{{ticket_list.count}}</span></h3>
 											</div>
-											<div>
-												<span class="text-success">+10%</span>
-											</div>
-										</div>
-										<h3 class="mb-3">112</h3>
-										<div class="progress mb-2" style="height: 5px;">
-											<div class="progress-bar bg-primary" role="progressbar" style="width: 70%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
 
-								<div class="card">
+								<div class="card mx-2" style="border-radius: 1rem; background-color:#e6e6e6;">
 									<div class="card-body">
-										<div class="d-flex justify-content-between mb-3">
+										<div class="d-flex justify-content-center">
 											<div>
-												<span class="d-block">Solved Tickets</span>
+												<h3 class="p-3">New Tickets : <span class="text-info ml-2">{{new_tickets_count}}</span></h3>
 											</div>
-											<div>
-												<span class="text-success">+12.5%</span>
-											</div>
-										</div>
-										<h3 class="mb-3">70</h3>
-										<div class="progress mb-2" style="height: 5px;">
-											<div class="progress-bar bg-primary" role="progressbar" style="width: 70%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
 
-								<div class="card">
+								<div class="card mx-2" style="border-radius: 1rem; background-color:#e6e6e6;">
 									<div class="card-body">
-										<div class="d-flex justify-content-between mb-3">
+										<div class="d-flex justify-content-center">
 											<div>
-												<span class="d-block">Open Tickets</span>
+												<h3 class="p-3">Declined Tickets : <span class="text-danger ml-2">{{decline_tickets_count}}</span></h3>
 											</div>
-											<div>
-												<span class="text-danger">-2.8%</span>
-											</div>
-										</div>
-										<h3 class="mb-3">100</h3>
-										<div class="progress mb-2" style="height: 5px;">
-											<div class="progress-bar bg-primary" role="progressbar" style="width: 70%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
 
-								<div class="card">
+								<div class="card ml-2" style="border-radius: 1rem; background-color:#e6e6e6;">
 									<div class="card-body">
-										<div class="d-flex justify-content-between mb-3">
+										<div class="d-flex justify-content-center">
 											<div>
-												<span class="d-block">Pending Tickets</span>
+												<h3 class="p-3">Solve Tickets : <span class="text-success ml-2">{{approved_tickets_count}}</span></h3>
 											</div>
-											<div>
-												<span class="text-danger">-75%</span>
-											</div>
-										</div>
-										<h3 class="mb-3">125</h3>
-										<div class="progress mb-2" style="height: 5px;">
-											<div class="progress-bar bg-primary" role="progressbar" style="width: 70%;" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
