--- a/templates/employee/base.html
+++ b/templates/employee/base.html
@@ -48,6 +48,11 @@
 			<script src="{% static 'js/html5shiv.min.js' %}"></script>
 			<script src="{% static 'js/respond.min.js"' %}></script>
 		<![endif]-->
+		<style>
+			.sidebar-menu ul li a.active {
+				color: red;
+			}
+		</style>
 		{% block head %} {% endblock head %}
     </head>
     <body>
