--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -85,26 +85,24 @@
 				<ul class="nav user-menu">
 
 					<!-- Search -->
-					<li class="nav-item">
-						<div class="top-nav-search">
-							<a class="responsive-search" href="javascript:void(0);">
-								<i class="fa fa-search"></i>
-							</a>
-							<form action="search.html">
-								<input class="form-control" placeholder="Search here" type="text">
-								<button class="btn" type="submit"><i class="fa fa-search"></i></button>
-							</form>
-						</div>
-					</li>
+<!--					<li class="nav-item">-->
+<!--						<div class="top-nav-search">-->
+<!--							<a class="responsive-search" href="javascript:void(0);">-->
+<!--								<i class="fa fa-search"></i>-->
+<!--							</a>-->
+<!--							<form action="search.html">-->
+<!--								<input class="form-control" placeholder="Search here" type="text">-->
+<!--								<button class="btn" type="submit"><i class="fa fa-search"></i></button>-->
+<!--							</form>-->
+<!--						</div>-->
+<!--					</li>-->
 					<!-- /Search -->
 
 					<li class="nav-item dropdown has-arrow main-drop">
-						<a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">
-							<span>{{user.username}}</span>
-						</a>
+						<a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#"><span><img class="avatar mr-3" alt="Profile image" src="{{user.avatar.url}}"></span><span class="mr-2">{{user.username}}</span></a>
 						<div class="dropdown-menu">
 							<a class="dropdown-item" href="{% url 'AdminProfileView' id=user.id %}"><i class="las la-user"></i>  My Profile</a>
-							<a class="dropdown-item" href="settings.html"><i class="las la-user-cog"></i>  Settings</a>
+<!--							<a class="dropdown-item" href="settings.html"><i class="las la-user-cog"></i>  Settings</a>-->
 							<a class="dropdown-item" href="/"><i class="las la-sign-out-alt"></i>  Logout</a>
 						</div>
 					</li>
@@ -117,7 +115,7 @@
 							class="fa fa-ellipsis-v"></i></a>
 					<div class="dropdown-menu dropdown-menu-right">
 						<a class="dropdown-item" href="/admin_profile">My Profile</a>
-						<a class="dropdown-item" href="settings.html">Settings</a>
+<!--						<a class="dropdown-item" href="settings.html">Settings</a>-->
 						<a class="dropdown-item" href="login.html">Logout</a>
 					</div>
 				</div>
