--- a/templates/admin/clients.html
+++ b/templates/admin/clients.html
@@ -4,6 +4,11 @@
 
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
+				<div class="show_message">
+					{% for message in messages %}
+					<div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+					{% endfor %}
+				</div>
 			
 				<!-- Page Content -->
                 <div class="content container-fluid">
@@ -19,10 +24,10 @@
 								</ul>
 							</div>
 							<div class="col-auto float-right ml-auto">
-								<a href="#" class="btn add-btn" data-toggle="modal" data-target="#add_client"><i class="fa fa-plus"></i> Add Client</a>
+								<button class="btn add-btn" onclick="addClient()"><i class="fa fa-plus"></i> Add Client</button>
 								<div class="view-icons">
-									<a href="clients.html" class="grid-view btn btn-link active"><i class="fa fa-th"></i></a>
-									<a href="clients-list.html" class="list-view btn btn-link"><i class="fa fa-bars"></i></a>
+									<a href="" class="grid-view btn btn-link active"><i class="fa fa-th"></i></a>
+									<a href="" class="list-view btn btn-link"><i class="fa fa-bars"></i></a>
 								</div>
 							</div>
 						</div>
@@ -58,184 +63,37 @@
 						</div>     
                     </div>
 					<!-- Search Filter -->
-					
+
+					<!-- /Page Content -->
 					<div class="row staff-grid-row">
+						{% for client in client_list %}
 						<div class="col-md-4 col-sm-6 col-12 col-lg-4 col-xl-3">
 							<div class="profile-widget">
 								<div class="profile-img">
-									<a href="client-profile.html" class="avatar"><img alt="" src=""></a>
+									<a href="{% url 'AdminClientDetailView' client.id %}"><img style="position: relative;" class="avatar" alt="Client Profile Image" src="{{client.client_avatar.url}}"></a>
+									{% if client.active_status == True %}
+									<span style="position: absolute; bottom: 0; right:5%; border:3px solid white; width: 20px; height: 20px; background-color: green; border-radius: 50%;"></span>
+									{% else %}
+									<span style="position: absolute; bottom: 0; right:5%; border:3px solid white; width: 20px; height: 20px; background-color: red; border-radius: 50%;"></span>
+									{% endif %}
 								</div>
 								<div class="dropdown profile-action">
-                                    <a class="p-2 text-danger" href="#" data-toggle="modal" data-target="#delete_client"><i class="fa fa-trash-o m-r-5"></i></a>
+                                    <button class="dropdown-item px-1 py-0 rounded d-sm-block text-center text-danger" onclick="deleteClient({{client.id}})"><i class="las la-lg la-trash"></i></button>
 								</div>
-								<h4 class="user-name m-t-10 mb-0 text-ellipsis"><a href="client-profile.html">Carlson Tech</a></h4>
-								<h5 class="user-name m-t-10 mb-0 text-ellipsis"><a href="client-profile.html">Betty Carlson</a></h5>
-								<div class="small text-muted">CEO</div>
-								<a href="client-profile.html" class="btn btn-white btn-sm m-t-10">View Profile</a>
+								<h4 class="user-name m-t-10 mb-0 text-ellipsis"><a href="{% url 'AdminClientDetailView' client.id %}">{{client.company_name}}</a></h4>
+								<h5 class="user-name m-t-10 mb-0 text-ellipsis"><a href="{% url 'AdminClientDetailView' client.id %}">{{client.username}}</a></h5>
+								<div class="small text-muted">{{client.position}}</div>
 							</div>
 						</div>
+						{% endfor %}
 					</div>
                 </div>
 				<!-- /Page Content -->
-			
-				<!-- Add Client Modal -->
-				<div id="add_client" class="modal custom-modal fade" role="dialog">
-					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title">Add Client</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<div class="modal-body">
-								<form>
-									<div class="row">
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">First Name <span class="text-danger">*</span></label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Last Name</label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Username <span class="text-danger">*</span></label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Email <span class="text-danger">*</span></label>
-												<input class="form-control floating" type="email">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Password</label>
-												<input class="form-control" type="password">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Confirm Password</label>
-												<input class="form-control" type="password">
-											</div>
-										</div>
-										<div class="col-md-6">  
-											<div class="form-group">
-												<label class="col-form-label">Client ID <span class="text-danger">*</span></label>
-												<input class="form-control floating" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Phone </label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Company Name</label>
-												<input class="form-control" type="text">
-											</div>
-										</div>
-									</div>
-									<div class="submit-section">
-										<button class="btn btn-primary submit-btn">Submit</button>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /Add Client Modal -->
+
+				<div id="add-client-form"></div>
 				
-				<!-- Edit Client Modal -->
-				<div id="edit_client" class="modal custom-modal fade" role="dialog">
-					<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-						<div class="modal-content">
-							<div class="modal-header">
-								<h5 class="modal-title">Edit Client</h5>
-								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-							<div class="modal-body">
-								<form>
-									<div class="row">
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">First Name <span class="text-danger">*</span></label>
-												<input class="form-control" value="Barry" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Last Name</label>
-												<input class="form-control" value="Cuda" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Username <span class="text-danger">*</span></label>
-												<input class="form-control" value="barrycuda" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Email <span class="text-danger">*</span></label>
-												<input class="form-control floating" value="barrycuda@example.com" type="email">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Password</label>
-												<input class="form-control" value="barrycuda" type="password">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Confirm Password</label>
-												<input class="form-control" value="barrycuda" type="password">
-											</div>
-										</div>
-										<div class="col-md-6">  
-											<div class="form-group">
-												<label class="col-form-label">Client ID <span class="text-danger">*</span></label>
-												<input class="form-control floating" value="CLT-0001" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Phone </label>
-												<input class="form-control" value="9876543210" type="text">
-											</div>
-										</div>
-										<div class="col-md-6">
-											<div class="form-group">
-												<label class="col-form-label">Company Name</label>
-												<input class="form-control" type="text" value="Global Technologies">
-											</div>
-										</div>
-									</div>
-									<div class="submit-section">
-										<button class="btn btn-primary submit-btn">Save</button>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /Edit Client Modal -->
-				
-				<!-- Delete Client Modal -->
-				<div class="modal custom-modal fade" id="delete_client" role="dialog">
+				<!-- Delete Employee Modal -->
+				<div class="modal custom-modal fade" id="delete_client_model" role="dialog">
 					<div class="modal-dialog modal-dialog-centered">
 						<div class="modal-content">
 							<div class="modal-body">
@@ -246,10 +104,10 @@
 								<div class="modal-btn delete-action">
 									<div class="row">
 										<div class="col-6">
-											<a href="javascript:void(0);" class="btn btn-primary continue-btn">Delete</a>
+											<a id="confirmDeleteBtn" href="#" class="btn btn-primary continue-btn">Delete</a>
 										</div>
 										<div class="col-6">
-											<a href="javascript:void(0);" data-dismiss="modal" class="btn btn-primary cancel-btn">Cancel</a>
+											<a href="#" data-dismiss="modal" class="btn btn-primary cancel-btn">Cancel</a>
 										</div>
 									</div>
 								</div>
@@ -257,8 +115,35 @@
 						</div>
 					</div>
 				</div>
-				<!-- /Delete Client Modal -->
+				<!-- /Delete Employee Modal -->
 				
             </div>
 			<!-- /Page Wrapper -->
+<script>
+function addClient() {
+    $.ajax({
+        url: "{% url 'AdminAddClient' %}",
+        success: function(response) {
+            $("#add-client-form").html(response);
+            $("#add_client_model").modal('show');
+        }
+    });
+}
+
+function deleteClient(deleteClientId) {
+    $("#delete_client_model").modal('show');
+    if (deleteClientId) {
+        var deleteUrl = "{% url 'AdminDeleteClient' id=0 %}".replace(0, deleteClientId);
+        $("#confirmDeleteBtn").attr("href", deleteUrl);
+    }
+}
+</script>
+<script>
+    window.setTimeout(function() {
+        $(".alert").fadeTo(500, 0).slideUp(500, function(){
+            $(this).remove();
+        });
+    }, 1600);
+</script>
+
 {% endblock body %}
