--- a/templates/admin/navigationpanel.html
+++ b/templates/admin/navigationpanel.html
@@ -15,7 +15,7 @@
                 <li><a href="{% url 'AdminTechnologyView' %}"><i class="las la-code"></i><span>Technology</span></a></li>
                 <li><a href="{% url 'AdminTicketList' %}"><i class="la la-ticket"></i> <span>Tickets</span></a></li>
                 <li><a href="{% url 'AdminChatView' user.id %}"><i class="las la-comments"></i><span>Chat</span></a></li>
-<!--                <li><a href="{% url 'AdminClientsView' %}"><span>Clients</span></a></li>-->
+                <li><a href="{% url 'AdminClientsView' %}"><i class="las la-handshake"></i><span>Clients</span></a></li>
                 <li class="menu-title"><span>Project</span></li>
                 <li><a href="{% url 'AdminProjectsView' %}"><i class="las la-project-diagram"></i><span>Projects</span></a></li>
                 <li><a href="{% url 'AdminProjectTask' %}"><i class="las la-tasks"></i><span>Tasks</span></a></li>
