--- a/templates/admin/profile.html
+++ b/templates/admin/profile.html
@@ -79,8 +79,7 @@
                                 </div>
                             </div>
                             <div class="pro-edit">
-                                <button class="edit-icon" onclick="editProfileInfo({{profile.id}})"><i
-                                        class="fa fa-pencil"></i></button>
+                                <button class="edit-icon" onclick="editProfileInfo({{profile.id}})"><i class="fa fa-pencil"></i></button>
                             </div>
                         </div>
                     </div>
